sửa kích cỡ ảnh của trang giỏ hàng, kích cỡ nút

--- a/CNW_WebBanQuanAo/Views/Cart/GioTam.cshtml
+++ b/CNW_WebBanQuanAo/Views/Cart/GioTam.cshtml
@@ -59,7 +59,7 @@
                         <tr>
 
                             <td class="cart_product">
-                                <a href=""><img src="~/Content/images/home/@it.url" alt=""></a>
+                                <a href=""><img src="~/Content/images/cart/@it.url" alt=""></a>
                             </td>
                             <td class="cart_price">
                                 <p>@it.tenh</p>
@@ -79,7 +79,7 @@
                             </td>
 
                             <td class="cart_total">
-                                <p class="cart_total_price">@it.gia</p>
+                                <p class="cart_total_price">@it.gia 000đ</p>
                             </td>
 
                         </tr>
@@ -104,7 +104,7 @@
                             <table class="table table-condensed total-result">
                                 <tr>
                                     <td>Tổng số giỏ hàng</td>
-                                    <td>@tongtien</td>
+                                    <td>@tongtien 000đ</td>
                                 </tr>
                                 <tr class="shipping-cost">
                                     <td>Phí vận chuyển</td>
