--- a/CNW_WebBanQuanAo/Views/Cart/Payment.cshtml
+++ b/CNW_WebBanQuanAo/Views/Cart/Payment.cshtml
@@ -105,7 +105,7 @@
                         <tr>
 
                             <td class="cart_product">
-                                <img src="~/Content/images/sanpham/@it.Sanpham.MATHANG.UrlAnh" alt="" />
+                                <img src="~/Content/images/cart/@it.Sanpham.MATHANG.UrlAnh" alt="" />
 
                             </td>
                             <td class="cart_description">
@@ -117,7 +117,7 @@
                                 <p>@it.Sanpham.MAU.TenMau</p>
                             </td>
                             <td class="cart_price">
-                                <p>@it.Sanpham.MATHANG.GiaBan</p>
+                                <p>@it.Sanpham.MATHANG.GiaBan 000đ</p>
                             </td>
                             <td class="cart_price">
                                 <p>@it.Quantity</p>
@@ -136,7 +136,7 @@
                             <table class="table table-condensed total-result">
                                 <tr>
                                     <td>Tổng số giỏ hàng</td>
-                                    <td>@tongtien</td>
+                                    <td>@tongtien 000đ</td>
                                 </tr>
                                 <tr class="shipping-cost">
                                     <td>Phí vận chuyển</td>
@@ -144,7 +144,7 @@
                                 </tr>
                                 <tr>
                                     <td>Tổng cộng</td>
-                                    <td><span>59 000₫</span></td>
+                                    <td><span>@tongtien 000đ</span></td>
                                 </tr>
                             </table>
                         </td>
