--- a/CNW_WebBanQuanAo/Views/Cart/XemDon.cshtml
+++ b/CNW_WebBanQuanAo/Views/Cart/XemDon.cshtml
@@ -121,7 +121,7 @@
                                 <p>@it.Mahd</p>
                             </td>
                             <td class="cart_product">
-                                <img src="~/Content/images/sanpham/@it.url" alt="">
+                                <img src="~/Content/images/cart/@it.url" alt="">
                             </td>
                             <td class="cart_description">
                                 <h4><a href="">@it.tenmh</a></h4>
@@ -138,7 +138,7 @@
                                 <p>@it.so</p>
                             </td>
                             <td class="cart_price">
-                                <p>@it.Gia</p>
+                                <p>@it.Gia 000đ</p>
                             </td>
 
 
