--- a/CNW_WebBanQuanAo/Views/Cart/ThanhToan.cshtml
+++ b/CNW_WebBanQuanAo/Views/Cart/ThanhToan.cshtml
@@ -122,7 +122,7 @@
                             <tr>
 
                                 <td class="cart_product">
-                                    <a href=""><img src="~/Content/images/sanpham/@it.url" alt=""></a>
+                                    <a href=""><img src="~/Content/images/cart/@it.url" alt=""></a>
                                 </td>
                                 <td class="cart_price">
                                     <p>@it.tenh</p>
@@ -142,7 +142,7 @@
                                 </td>
 
                                 <td class="cart_total">
-                                    <p class="cart_total_price">@it.gia</p>
+                                    <p class="cart_total_price">@it.gia 000đ</p>
                                 </td>
 
                             </tr>
@@ -167,7 +167,7 @@
                                 <table class="table table-condensed total-result">
                                     <tr>
                                         <td>Tổng số giỏ hàng</td>
-                                        <td>@tongtien</td>
+                                        <td>@tongtien 000đ</td>
                                     </tr>
                                     <tr class="shipping-cost">
                                         <td>Phí vận chuyển</td>
@@ -175,7 +175,7 @@
                                     </tr>
                                     <tr>
                                         <td>Tổng cộng</td>
-                                        <td><span>59 000₫</span></td>
+                                        <td><span>@tongtien 000đ</span></td>
                                     </tr>
                                 </table>
                             </td>
